--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "babel-register": "^6.3.13",
     "babel-runtime": "^6.3.19",
     "body-parser": "^1.14.1",
+    "classnames": "^2.2.5",
     "compression": "^1.6.0",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
@@ -123,9 +124,11 @@
     "react-helmet": "^2.2.0",
     "react-inline-css": "^2.0.0",
     "react-redux": "^4.0.0",
+    "react-responsive": "^1.1.3",
     "react-router": "2.0.0",
     "react-router-bootstrap": "^0.20.1",
     "react-router-redux": "^4.0.0",
+    "react-stickynode": "^1.1.0",
     "redux": "^3.0.4",
     "redux-async-connect": "^1.0.0-rc2",
     "redux-form": "^3.0.12",
