--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "classnames": "^2.2.5",
     "clean-webpack-plugin": "^0.1.6",
     "compression": "^1.6.0",
+    "concurrently": "^0.1.1",
     "css-loader": "^0.23.1",
     "eslint-loader": "^1.0.0",
     "express": "^4.13.3",
@@ -134,7 +135,6 @@
     "react-helmet": "^2.2.0",
     "react-inline-css": "^2.0.0",
     "react-redux": "^4.0.0",
-    "react-responsive": "^1.1.3",
     "react-router": "2.0.0",
     "react-router-bootstrap": "^0.20.1",
     "react-router-redux": "^4.0.0",
@@ -142,6 +142,7 @@
     "redux": "^3.0.4",
     "redux-async-connect": "^1.0.0-rc2",
     "redux-form": "^3.0.12",
+    "redux-responsive": "^2.1.1",
     "sass-loader": "^3.1.2",
     "scroll-behavior": "^0.3.2",
     "serialize-javascript": "^1.1.2",
@@ -153,7 +154,6 @@
     "superagent": "^1.4.0",
     "url-loader": "^0.5.7",
     "warning": "^2.1.0",
-    "concurrently": "^0.1.1",
     "webpack-isomorphic-tools": "^2.2.18"
   },
   "devDependencies": {
