Use normalizer to handle entities

--- a/package.json
+++ b/package.json
@@ -124,9 +124,11 @@
     "karma-sourcemap-loader": "^0.3.5",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
+    "lodash": "^4.13.1",
     "lru-memoize": "^1.0.0",
     "map-props": "^1.0.0",
     "multireducer": "^2.0.0",
+    "normalizr": "^2.1.0",
     "piping": "^0.3.0",
     "pretty-error": "^1.2.0",
     "react": "^0.14.2",
