Add Blog page with category and bible filters

--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "react-dom": "^0.14.1",
     "react-helmet": "^2.2.0",
     "react-inline-css": "^2.0.0",
+    "react-motion": "^0.4.4",
     "react-parallax": "^0.4.3",
     "react-redux": "^4.0.0",
     "react-router": "2.0.0",
@@ -146,6 +147,7 @@
     "redux-async-connect": "^1.0.0-rc2",
     "redux-form": "^3.0.12",
     "redux-responsive": "^2.1.1",
+    "redux-thunk": "^2.1.0",
     "sass-loader": "^3.1.2",
     "scroll-behavior": "^0.3.2",
     "serialize-javascript": "^1.1.2",
