--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
-{ "extends": "eslint-config-airbnb",
+{
+  "extends": "airbnb",
   "env": {
     "browser": true,
     "node": true,
@@ -15,15 +16,22 @@
     "comma-dangle": 0,  // not sure why airbnb turned this on. gross!
     "indent": [2, 2, {"SwitchCase": 1}],
     "no-console": 0,
-    "no-alert": 0
+    "no-alert": 0,
+    "no-underscore-dangle": 0,
+    "react/jsx-filename-extension": [1, { "extensions": [".js"] }],
+    "react/jsx-first-prop-new-line": [1, "multiline"],
+    "react/require-extension": 0,
+    "import/no-extraneous-dependencies": [error, { devDependencies: true }]
   },
   "plugins": [
     "react", "import"
   ],
+  "parser": "babel-eslint",
   "settings": {
-    "import/parser": "babel-eslint",
-    "import/resolve": {
-      "moduleDirectory": ["node_modules", "src"]
+    "import/resolver": {
+      "node": {
+        "moduleDirectory": ["node_modules", "src"]
+      }
     }
   },
   "globals": {
