--- a/package.json
+++ b/package.json
@@ -89,111 +89,112 @@
     }
   },
   "dependencies": {
-    "autoprefixer-loader": "^3.1.0",
-    "babel-core": "^6.5.2",
-    "babel-loader": "^6.2.1",
-    "babel-plugin-add-module-exports": "^0.1.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-display-name": "^6.3.13",
-    "babel-plugin-transform-runtime": "^6.3.13",
-    "babel-polyfill": "^6.3.14",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-register": "^6.3.13",
-    "babel-runtime": "^6.3.19",
-    "better-npm-run": "0.0.8",
-    "body-parser": "^1.14.1",
-    "bootstrap-sass-loader": "^1.0.9",
-    "classnames": "^2.2.5",
-    "clean-webpack-plugin": "^0.1.6",
-    "compression": "^1.6.0",
-    "concurrently": "^0.1.1",
-    "css-loader": "^0.23.1",
-    "eslint-loader": "^1.0.0",
-    "express": "^4.13.3",
-    "express-session": "^1.12.1",
-    "extract-text-webpack-plugin": "^0.9.1",
-    "file-loader": "^0.8.5",
-    "font-awesome": "^4.4.0",
+    "autoprefixer-loader": "3.2.0",
+    "babel-core": "6.13.2",
+    "babel-loader": "6.2.5",
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-plugin-transform-react-display-name": "6.8.0",
+    "babel-plugin-transform-runtime": "6.12.0",
+    "babel-polyfill": "6.13.0",
+    "babel-preset-es2015": "6.13.2",
+    "babel-preset-react": "6.11.1",
+    "babel-preset-stage-0": "6.5.0",
+    "babel-register": "6.11.6",
+    "babel-runtime": "6.11.6",
+    "better-npm-run": "0.0.10",
+    "body-parser": "1.15.2",
+    "bootstrap-sass-loader": "1.0.10",
+    "classnames": "2.2.5",
+    "clean-webpack-plugin": "0.1.10",
+    "compression": "1.6.2",
+    "concurrently": "2.2.0",
+    "css-loader": "0.23.1",
+    "eslint-loader": "1.5.0",
+    "eslint-plugin-jsx-a11y": "2.1.0",
+    "express": "4.14.0",
+    "express-session": "1.14.0",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
+    "font-awesome": "4.6.3",
     "font-awesome-webpack": "0.0.4",
-    "hoist-non-react-statics": "^1.0.3",
-    "http-proxy": "^1.12.0",
-    "invariant": "^2.2.0",
-    "json-loader": "^0.5.4",
-    "karma-sourcemap-loader": "^0.3.5",
-    "less": "^2.5.3",
-    "less-loader": "^2.2.1",
-    "lodash": "^4.13.1",
-    "lru-memoize": "^1.0.0",
-    "map-props": "^1.0.0",
-    "multireducer": "^2.0.0",
-    "normalizr": "^2.1.0",
-    "piping": "^0.3.0",
-    "pretty-error": "^1.2.0",
-    "react": "^0.14.2",
-    "react-bootstrap": "^0.28.1",
-    "react-dom": "^0.14.1",
-    "react-helmet": "^2.2.0",
-    "react-inline-css": "^2.0.0",
-    "react-motion": "^0.4.4",
-    "react-parallax": "^0.4.3",
-    "react-redux": "^4.0.0",
-    "react-router": "2.0.0",
-    "react-router-bootstrap": "^0.20.1",
-    "react-router-redux": "^4.0.0",
-    "react-stickynode": "^1.1.0",
-    "redux": "^3.0.4",
-    "redux-async-connect": "^1.0.0-rc2",
-    "redux-form": "^3.0.12",
-    "redux-responsive": "^2.1.1",
-    "redux-thunk": "^2.1.0",
-    "sass-loader": "^3.1.2",
-    "scroll-behavior": "^0.3.2",
-    "serialize-javascript": "^1.1.2",
-    "serve-favicon": "^2.3.0",
-    "socket.io": "^1.3.7",
-    "socket.io-client": "^1.3.7",
-    "strip-loader": "^0.1.0",
-    "style-loader": "^0.13.0",
-    "superagent": "^1.4.0",
-    "url-loader": "^0.5.7",
-    "warning": "^2.1.0",
-    "webpack-isomorphic-tools": "^2.2.18"
+    "hoist-non-react-statics": "1.2.0",
+    "http-proxy": "1.14.0",
+    "invariant": "2.2.1",
+    "json-loader": "0.5.4",
+    "karma-sourcemap-loader": "0.3.7",
+    "less": "2.7.1",
+    "less-loader": "2.2.3",
+    "lodash": "4.15.0",
+    "lru-memoize": "1.0.1",
+    "map-props": "1.0.0",
+    "multireducer": "3.0.0",
+    "normalizr": "2.2.1",
+    "phantomjs-prebuilt": "2.1.12",
+    "piping": "1.0.0-rc.3",
+    "pretty-error": "2.0.0",
+    "react": "15.3.0",
+    "react-bootstrap": "0.30.2",
+    "react-dom": "15.3.0",
+    "react-helmet": "3.1.0",
+    "react-inline-css": "2.3.0",
+    "react-motion": "0.4.4",
+    "react-parallax": "0.4.3",
+    "react-redux": "4.4.5",
+    "react-router": "2.6.1",
+    "react-router-bootstrap": "0.23.1",
+    "react-router-redux": "4.0.5",
+    "react-stickynode": "1.2.1",
+    "redux": "3.5.2",
+    "redux-connect": "3.0.0",
+    "redux-form": "5.3.2",
+    "redux-responsive": "3.1.0",
+    "redux-thunk": "2.1.0",
+    "sass-loader": "4.0.0",
+    "scroll-behavior": "0.8.1",
+    "serialize-javascript": "1.3.0",
+    "serve-favicon": "2.3.0",
+    "socket.io": "1.4.8",
+    "socket.io-client": "1.4.8",
+    "strip-loader": "0.1.2",
+    "style-loader": "0.13.1",
+    "superagent": "2.2.0",
+    "url-loader": "0.5.7",
+    "warning": "3.0.0",
+    "webpack-isomorphic-tools": "2.5.7"
   },
   "devDependencies": {
-    "babel-eslint": "^5.0.0-beta6",
-    "babel-plugin-react-transform": "^2.0.0",
-    "babel-plugin-typecheck": "^3.6.0",
-    "bootstrap-sass": "^3.3.5",
-    "chai": "^3.3.0",
-    "eslint": "1.10.3",
-    "eslint-config-airbnb": "0.1.0",
-    "eslint-plugin-import": "^0.8.0",
-    "eslint-plugin-react": "^3.5.0",
-    "karma": "^0.13.10",
-    "karma-cli": "^0.1.1",
-    "karma-mocha": "^0.2.0",
-    "karma-mocha-reporter": "^1.1.1",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "karma-webpack": "^1.7.0",
-    "mocha": "^2.3.3",
-    "node-sass": "^3.4.2",
-    "phantomjs": "^1.9.18",
-    "phantomjs-polyfill": "0.0.1",
-    "react-a11y": "^0.2.6",
-    "react-addons-test-utils": "^0.14.0",
-    "react-transform-catch-errors": "^1.0.0",
-    "react-transform-hmr": "^1.0.1",
-    "redbox-react": "^1.1.1",
-    "redux-devtools": "^3.0.0-beta-3",
-    "redux-devtools-dock-monitor": "^1.0.0-beta-3",
-    "redux-devtools-log-monitor": "^1.0.0-beta-3",
-    "sinon": "^1.17.2",
-    "timekeeper": "0.0.5",
-    "webpack": "^1.12.9",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.5.0"
+    "babel-eslint": "6.1.2",
+    "babel-plugin-react-transform": "2.0.2",
+    "babel-plugin-typecheck": "3.9.0",
+    "bootstrap-sass": "3.3.7",
+    "chai": "3.5.0",
+    "eslint": "3.3.1",
+    "eslint-config-airbnb": "10.0.1",
+    "eslint-plugin-import": "1.13.0",
+    "eslint-plugin-react": "6.1.2",
+    "karma": "1.2.0",
+    "karma-cli": "1.0.1",
+    "karma-mocha": "1.1.1",
+    "karma-mocha-reporter": "2.1.0",
+    "karma-phantomjs-launcher": "1.0.1",
+    "karma-webpack": "1.8.0",
+    "mocha": "3.0.2",
+    "node-sass": "3.8.0",
+    "phantomjs-polyfill": "0.0.2",
+    "react-a11y": "0.3.3",
+    "react-addons-test-utils": "15.3.0",
+    "react-transform-catch-errors": "1.0.2",
+    "react-transform-hmr": "1.0.4",
+    "redbox-react": "1.3.0",
+    "redux-devtools": "3.3.1",
+    "redux-devtools-dock-monitor": "1.1.1",
+    "redux-devtools-log-monitor": "1.0.11",
+    "sinon": "1.17.5",
+    "timekeeper": "0.1.1",
+    "webpack": "1.13.2",
+    "webpack-dev-middleware": "1.6.1",
+    "webpack-hot-middleware": "2.12.2"
   },
   "engines": {
     "node": "5.6.0"
