--- a/package.json
+++ b/package.json
@@ -128,6 +128,8 @@
     "lodash": "4.15.0",
     "lru-memoize": "1.0.1",
     "map-props": "1.0.0",
+    "md5": "^2.1.0",
+    "moment": "^2.14.1",
     "multireducer": "3.0.0",
     "normalizr": "2.2.1",
     "phantomjs-prebuilt": "2.1.12",
@@ -135,7 +137,9 @@
     "pretty-error": "2.0.0",
     "react": "15.3.0",
     "react-bootstrap": "0.30.2",
+    "react-disqus-thread": "^0.4.0",
     "react-dom": "15.3.0",
+    "react-gravatar": "^2.4.5",
     "react-helmet": "3.1.0",
     "react-inline-css": "2.3.0",
     "react-motion": "0.4.4",
