--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "main": "bin/server.js",
   "scripts": {
-    "start": "concurrent --kill-others \"npm run start-prod\" \"npm run start-prod-api\"",
+    "start": "concurrent --kill-others \"npm run start-prod\"",
     "start-prod": "better-npm-run start-prod",
     "start-prod-api": "better-npm-run start-prod-api",
     "build": "better-npm-run build",
@@ -135,11 +135,11 @@
     "phantomjs-prebuilt": "2.1.12",
     "piping": "1.0.0-rc.3",
     "pretty-error": "2.0.0",
+    "randomcolor": "^0.4.4",
     "react": "15.3.0",
     "react-bootstrap": "0.30.2",
     "react-disqus-thread": "^0.4.0",
     "react-dom": "15.3.0",
-    "react-gravatar": "^2.4.5",
     "react-helmet": "3.1.0",
     "react-inline-css": "2.3.0",
     "react-motion": "0.4.4",
