--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "css-loader": "0.23.1",
     "eslint-loader": "1.5.0",
     "eslint-plugin-jsx-a11y": "2.1.0",
+    "exenv": "1.2.1",
     "express": "4.14.0",
     "express-session": "1.14.0",
     "extract-text-webpack-plugin": "1.0.1",
@@ -153,7 +154,7 @@
     "redux": "3.5.2",
     "redux-connect": "3.0.0",
     "redux-form": "5.3.2",
-    "redux-responsive": "3.1.0",
+    "redux-responsive": "4.0.2",
     "redux-thunk": "2.1.0",
     "sass-loader": "4.0.0",
     "scroll-behavior": "0.8.1",
