--- a/package.json
+++ b/package.json
@@ -106,18 +106,18 @@
     "lodash": "4.15.0",
     "lru-memoize": "1.0.1",
     "map-props": "1.0.0",
-    "md5": "^2.1.0",
-    "moment": "^2.14.1",
+    "md5": "2.1.0",
+    "moment": "2.14.1",
     "multireducer": "3.0.0",
     "normalizr": "2.2.1",
     "phantomjs-prebuilt": "2.1.12",
     "piping": "1.0.0-rc.3",
     "pretty-error": "2.0.0",
-    "qs": "^6.3.0",
-    "randomcolor": "^0.4.4",
+    "qs": "6.3.0",
+    "randomcolor": "0.4.4",
     "react": "15.3.0",
     "react-bootstrap": "0.30.2",
-    "react-disqus-thread": "^0.4.0",
+    "react-disqus-thread": "0.4.0",
     "react-dom": "15.3.0",
     "react-helmet": "3.1.0",
     "react-inline-css": "2.3.0",
@@ -139,11 +139,11 @@
     "socket.io": "1.4.8",
     "socket.io-client": "1.4.8",
     "strip-loader": "0.1.2",
-    "style-loader": "0.13.1",
+    "style-loader": "0.18.2",
     "superagent": "2.2.0",
     "url-loader": "0.5.7",
     "warning": "3.0.0",
-    "webpack-isomorphic-tools": "2.5.7"
+    "webpack-isomorphic-tools": "3.0.3"
   },
   "devDependencies": {
     "babel-eslint": "6.1.2",
