--- a/package.json
+++ b/package.json
@@ -24,14 +24,13 @@
   ],
   "main": "bin/server.js",
   "scripts": {
-    "start": "concurrent --kill-others \"npm run start-prod\"",
+    "start": "concurrently --kill-others \"npm run start-prod\"",
     "start-prod": "better-npm-run start-prod",
     "build": "better-npm-run build",
     "lint": "eslint -c .eslintrc src",
     "start-dev": "better-npm-run start-dev",
     "watch-client": "better-npm-run watch-client",
-    "dev": "concurrent --kill-others \"npm run watch-client\" \"npm run start-dev\"",
-    "test": "karma start"
+    "dev": "concurrently --kill-others \"npm run watch-client\" \"npm run start-dev\""
   },
   "betterScripts": {
     "start-prod": {
@@ -68,7 +67,7 @@
   "dependencies": {
     "autoprefixer-loader": "3.2.0",
     "babel-core": "6.13.2",
-    "babel-loader": "6.2.5",
+    "babel-loader": "6.2.10",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-react-display-name": "6.8.0",
@@ -79,69 +78,69 @@
     "babel-preset-stage-0": "6.5.0",
     "babel-register": "6.11.6",
     "babel-runtime": "6.11.6",
-    "better-npm-run": "0.0.10",
+    "better-npm-run": "0.0.15",
     "body-parser": "1.15.2",
     "bootstrap-sass-loader": "1.0.10",
     "classnames": "2.2.5",
-    "clean-webpack-plugin": "0.1.10",
+    "clean-webpack-plugin": "0.1.16",
     "compression": "1.6.2",
     "concurrently": "2.2.0",
     "css-loader": "0.23.1",
     "eslint-loader": "1.5.0",
     "eslint-plugin-jsx-a11y": "2.1.0",
-    "exenv": "1.2.1",
-    "express": "4.14.0",
-    "express-session": "1.14.0",
+    "exenv": "1.2.2",
+    "express": "4.14.1",
+    "express-session": "1.14.2",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "font-awesome": "4.6.3",
-    "font-awesome-webpack": "0.0.4",
+    "font-awesome-webpack": "0.0.5-beta.2",
     "hoist-non-react-statics": "1.2.0",
     "http-proxy": "1.14.0",
-    "invariant": "2.2.1",
-    "json-loader": "0.5.4",
+    "invariant": "2.2.2",
+    "json-loader": "0.5.7",
     "karma-sourcemap-loader": "0.3.7",
-    "less": "2.7.1",
+    "less": "2.7.2",
     "less-loader": "2.2.3",
     "lodash": "4.15.0",
-    "lru-memoize": "1.0.1",
+    "lru-memoize": "1.0.2",
     "map-props": "1.0.0",
     "md5": "2.1.0",
     "moment": "2.14.1",
-    "multireducer": "3.0.0",
+    "multireducer": "3.0.3",
     "normalizr": "2.2.1",
-    "phantomjs-prebuilt": "2.1.12",
-    "piping": "1.0.0-rc.3",
-    "pretty-error": "2.0.0",
-    "qs": "6.3.0",
+    "phantomjs-prebuilt": "2.1.14",
+    "piping": "1.0.0-rc.4",
+    "pretty-error": "2.0.3",
+    "qs": "6.3.2",
     "randomcolor": "0.4.4",
-    "react": "15.3.0",
-    "react-bootstrap": "0.30.2",
+    "react": "15.3.2",
+    "react-bootstrap": "0.30.10",
     "react-disqus-thread": "0.4.0",
-    "react-dom": "15.3.0",
+    "react-dom": "15.3.2",
     "react-helmet": "3.1.0",
-    "react-inline-css": "2.3.0",
-    "react-motion": "0.4.4",
-    "react-redux": "4.4.5",
+    "react-inline-css": "2.3.1",
+    "react-motion": "0.4.8",
+    "react-redux": "4.4.8",
     "react-router": "2.6.1",
-    "react-router-bootstrap": "0.23.1",
-    "react-router-redux": "4.0.5",
+    "react-router-bootstrap": "0.23.3",
+    "react-router-redux": "4.0.8",
     "react-stickynode": "1.2.1",
     "redux": "3.5.2",
     "redux-connect": "3.0.0",
-    "redux-form": "5.3.2",
+    "redux-form": "5.3.6",
     "redux-responsive": "4.0.2",
-    "redux-thunk": "2.1.0",
-    "sass-loader": "4.0.0",
-    "scroll-behavior": "0.8.1",
+    "redux-thunk": "2.1.2",
+    "sass-loader": "4.0.2",
+    "scroll-behavior": "0.8.2",
     "serialize-javascript": "1.3.0",
-    "serve-favicon": "2.3.0",
+    "serve-favicon": "2.3.2",
     "socket.io": "1.4.8",
     "socket.io-client": "1.4.8",
     "strip-loader": "0.1.2",
     "style-loader": "0.18.2",
     "superagent": "2.2.0",
-    "url-loader": "0.5.7",
+    "url-loader": "0.5.9",
     "warning": "3.0.0",
     "webpack-isomorphic-tools": "3.0.3"
   },
@@ -159,22 +158,22 @@
     "karma-cli": "1.0.1",
     "karma-mocha": "1.1.1",
     "karma-mocha-reporter": "2.1.0",
-    "karma-phantomjs-launcher": "1.0.1",
-    "karma-webpack": "1.8.0",
+    "karma-phantomjs-launcher": "1.0.4",
+    "karma-webpack": "1.8.1",
     "mocha": "3.0.2",
     "node-sass": "3.8.0",
     "phantomjs-polyfill": "0.0.2",
-    "react-a11y": "0.3.3",
-    "react-addons-test-utils": "15.3.0",
+    "react-a11y": "0.3.4",
+    "react-addons-test-utils": "15.3.2",
     "react-transform-catch-errors": "1.0.2",
     "react-transform-hmr": "1.0.4",
-    "redbox-react": "1.3.0",
-    "redux-devtools": "3.3.1",
-    "redux-devtools-dock-monitor": "1.1.1",
-    "redux-devtools-log-monitor": "1.0.11",
-    "sinon": "1.17.5",
+    "redbox-react": "1.3.7",
+    "redux-devtools": "3.3.2",
+    "redux-devtools-dock-monitor": "1.1.2",
+    "redux-devtools-log-monitor": "1.0.12-alpha",
+    "sinon": "1.17.7",
     "timekeeper": "0.1.1",
-    "webpack": "1.13.2",
+    "webpack": "1.13.3",
     "webpack-dev-middleware": "1.6.1",
     "webpack-hot-middleware": "2.12.2"
   },
