--- a/package.json
+++ b/package.json
@@ -66,80 +66,80 @@
   },
   "dependencies": {
     "autoprefixer-loader": "3.2.0",
-    "babel-core": "6.13.2",
-    "babel-loader": "6.2.10",
+    "babel-core": "6.25.0",
+    "babel-loader": "6.4.1",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-react-display-name": "6.8.0",
-    "babel-plugin-transform-runtime": "6.12.0",
-    "babel-polyfill": "6.13.0",
-    "babel-preset-es2015": "6.13.2",
-    "babel-preset-react": "6.11.1",
-    "babel-preset-stage-0": "6.5.0",
-    "babel-register": "6.11.6",
-    "babel-runtime": "6.11.6",
-    "better-npm-run": "0.0.15",
-    "body-parser": "1.15.2",
+    "babel-plugin-transform-react-display-name": "6.25.0",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "babel-register": "6.24.1",
+    "babel-runtime": "6.25.0",
+    "better-npm-run": "0.1.0",
+    "body-parser": "1.17.2",
     "bootstrap-sass-loader": "1.0.10",
     "classnames": "2.2.5",
     "clean-webpack-plugin": "0.1.16",
-    "compression": "1.6.2",
+    "compression": "1.7.0",
     "concurrently": "2.2.0",
-    "css-loader": "0.23.1",
-    "eslint-loader": "1.5.0",
-    "eslint-plugin-jsx-a11y": "2.1.0",
+    "css-loader": "0.28.4",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-jsx-a11y": "2.2.3",
     "exenv": "1.2.2",
-    "express": "4.14.1",
-    "express-session": "1.14.2",
+    "express": "4.15.3",
+    "express-session": "1.15.4",
     "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.9.0",
-    "font-awesome": "4.6.3",
+    "file-loader": "0.11.2",
+    "font-awesome": "4.7.0",
     "font-awesome-webpack": "0.0.5-beta.2",
     "hoist-non-react-statics": "1.2.0",
-    "http-proxy": "1.14.0",
+    "http-proxy": "1.16.2",
     "invariant": "2.2.2",
     "json-loader": "0.5.7",
     "karma-sourcemap-loader": "0.3.7",
     "less": "2.7.2",
     "less-loader": "2.2.3",
-    "lodash": "4.15.0",
+    "lodash": "4.17.4",
     "lru-memoize": "1.0.2",
     "map-props": "1.0.0",
-    "md5": "2.1.0",
-    "moment": "2.14.1",
-    "multireducer": "3.0.3",
-    "normalizr": "2.2.1",
+    "md5": "2.2.1",
+    "moment": "2.18.1",
+    "multireducer": "3.1.0",
+    "normalizr": "2.3.1",
     "phantomjs-prebuilt": "2.1.14",
     "piping": "1.0.0-rc.4",
-    "pretty-error": "2.0.3",
-    "qs": "6.3.2",
-    "randomcolor": "0.4.4",
-    "react": "15.3.2",
-    "react-bootstrap": "0.30.10",
+    "pretty-error": "2.1.1",
+    "prop-types": "^15.5.10",
+    "qs": "6.5.0",
+    "randomcolor": "0.5.3",
+    "react": "15.6.1",
+    "react-bootstrap": "0.31.1",
     "react-disqus-thread": "0.4.0",
-    "react-dom": "15.3.2",
-    "react-helmet": "3.1.0",
+    "react-dom": "15.6.1",
+    "react-helmet": "3.3.2",
     "react-inline-css": "2.3.1",
-    "react-motion": "0.4.8",
+    "react-motion": "0.5.0",
     "react-redux": "4.4.8",
-    "react-router": "2.6.1",
-    "react-router-bootstrap": "0.23.3",
+    "react-router": "2.8.1",
+    "react-router-bootstrap": "0.24.2",
     "react-router-redux": "4.0.8",
-    "react-stickynode": "1.2.1",
-    "redux": "3.5.2",
+    "react-stickynode": "1.3.1",
+    "redux": "3.7.2",
     "redux-connect": "3.0.0",
     "redux-form": "5.3.6",
-    "redux-responsive": "4.0.2",
-    "redux-thunk": "2.1.2",
-    "sass-loader": "4.0.2",
-    "scroll-behavior": "0.8.2",
-    "serialize-javascript": "1.3.0",
-    "serve-favicon": "2.3.2",
-    "socket.io": "1.4.8",
-    "socket.io-client": "1.4.8",
+    "redux-responsive": "4.3.2",
+    "redux-thunk": "2.2.0",
+    "sass-loader": "4.1.1",
+    "serialize-javascript": "1.4.0",
+    "serve-favicon": "2.4.3",
+    "socket.io": "1.7.4",
+    "socket.io-client": "1.7.4",
     "strip-loader": "0.1.2",
     "style-loader": "0.18.2",
-    "superagent": "2.2.0",
+    "superagent": "2.3.0",
     "url-loader": "0.5.9",
     "warning": "3.0.0",
     "webpack-isomorphic-tools": "3.0.3"
@@ -150,32 +150,32 @@
     "babel-plugin-typecheck": "3.9.0",
     "bootstrap-sass": "3.3.7",
     "chai": "3.5.0",
-    "eslint": "3.3.1",
+    "eslint": "3.19.0",
     "eslint-config-airbnb": "10.0.1",
-    "eslint-plugin-import": "1.13.0",
-    "eslint-plugin-react": "6.1.2",
-    "karma": "1.2.0",
+    "eslint-plugin-import": "1.16.0",
+    "eslint-plugin-react": "6.10.3",
+    "karma": "1.7.0",
     "karma-cli": "1.0.1",
-    "karma-mocha": "1.1.1",
-    "karma-mocha-reporter": "2.1.0",
+    "karma-mocha": "1.3.0",
+    "karma-mocha-reporter": "2.2.3",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-webpack": "1.8.1",
-    "mocha": "3.0.2",
-    "node-sass": "3.8.0",
+    "mocha": "3.5.0",
+    "node-sass": "3.14.0-0",
     "phantomjs-polyfill": "0.0.2",
     "react-a11y": "0.3.4",
-    "react-addons-test-utils": "15.3.2",
+    "react-addons-test-utils": "15.6.0",
     "react-transform-catch-errors": "1.0.2",
     "react-transform-hmr": "1.0.4",
-    "redbox-react": "1.3.7",
-    "redux-devtools": "3.3.2",
+    "redbox-react": "1.5.0",
+    "redux-devtools": "3.4.0",
     "redux-devtools-dock-monitor": "1.1.2",
-    "redux-devtools-log-monitor": "1.0.12-alpha",
+    "redux-devtools-log-monitor": "1.3.0",
     "sinon": "1.17.7",
     "timekeeper": "0.1.1",
-    "webpack": "1.13.3",
-    "webpack-dev-middleware": "1.6.1",
-    "webpack-hot-middleware": "2.12.2"
+    "webpack": "1.15.0",
+    "webpack-dev-middleware": "1.12.0",
+    "webpack-hot-middleware": "2.18.2"
   },
   "engines": {
     "node": "5.6.0"
