--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "start": "concurrently --kill-others \"npm run start-prod\"",
     "start-prod": "better-npm-run start-prod",
     "build": "better-npm-run build",
-    "lint": "eslint -c .eslintrc src",
+    "lint": "eslint -c .eslintrc.js src",
     "start-dev": "better-npm-run start-dev",
     "watch-client": "better-npm-run watch-client",
     "dev": "concurrently --kill-others \"npm run watch-client\" \"npm run start-dev\""
@@ -67,7 +67,7 @@
   "dependencies": {
     "autoprefixer-loader": "3.2.0",
     "babel-core": "6.25.0",
-    "babel-loader": "6.4.1",
+    "babel-loader": "7.1.1",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-react-display-name": "6.25.0",
@@ -84,22 +84,17 @@
     "classnames": "2.2.5",
     "clean-webpack-plugin": "0.1.16",
     "compression": "1.7.0",
-    "concurrently": "2.2.0",
+    "concurrently": "3.5.0",
     "css-loader": "0.28.4",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-jsx-a11y": "2.2.3",
     "exenv": "1.2.2",
-    "express": "4.15.3",
-    "express-session": "1.15.4",
+    "express": "^4.15.3",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.11.2",
     "font-awesome": "4.7.0",
     "font-awesome-webpack": "0.0.5-beta.2",
     "hoist-non-react-statics": "1.2.0",
-    "http-proxy": "1.16.2",
     "invariant": "2.2.2",
     "json-loader": "0.5.7",
-    "karma-sourcemap-loader": "0.3.7",
     "less": "2.7.2",
     "less-loader": "2.2.3",
     "lodash": "4.17.4",
@@ -135,8 +130,6 @@
     "sass-loader": "4.1.1",
     "serialize-javascript": "1.4.0",
     "serve-favicon": "2.4.3",
-    "socket.io": "1.7.4",
-    "socket.io-client": "1.7.4",
     "strip-loader": "0.1.2",
     "style-loader": "0.18.2",
     "superagent": "2.3.0",
@@ -145,24 +138,18 @@
     "webpack-isomorphic-tools": "3.0.3"
   },
   "devDependencies": {
-    "babel-eslint": "6.1.2",
+    "babel-eslint": "7.2.3",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-typecheck": "3.9.0",
     "bootstrap-sass": "3.3.7",
-    "chai": "3.5.0",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "10.0.1",
-    "eslint-plugin-import": "1.16.0",
-    "eslint-plugin-react": "6.10.3",
-    "karma": "1.7.0",
-    "karma-cli": "1.0.1",
-    "karma-mocha": "1.3.0",
-    "karma-mocha-reporter": "2.2.3",
-    "karma-phantomjs-launcher": "1.0.4",
-    "karma-webpack": "1.8.1",
-    "mocha": "3.5.0",
+    "eslint": "4.3.0",
+    "eslint-config-react-app": "^1.0.5",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "^2.35.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "next",
     "node-sass": "3.14.0-0",
-    "phantomjs-polyfill": "0.0.2",
     "react-a11y": "0.3.4",
     "react-addons-test-utils": "15.6.0",
     "react-transform-catch-errors": "1.0.2",
@@ -171,8 +158,6 @@
     "redux-devtools": "3.4.0",
     "redux-devtools-dock-monitor": "1.1.2",
     "redux-devtools-log-monitor": "1.3.0",
-    "sinon": "1.17.7",
-    "timekeeper": "0.1.1",
     "webpack": "1.15.0",
     "webpack-dev-middleware": "1.12.0",
     "webpack-hot-middleware": "2.18.2"
