--- a/package.json
+++ b/package.json
@@ -88,22 +88,20 @@
     "css-loader": "0.28.4",
     "exenv": "1.2.2",
     "express": "^4.15.3",
-    "extract-text-webpack-plugin": "1.0.1",
+    "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "font-awesome": "4.7.0",
-    "font-awesome-webpack": "0.0.5-beta.2",
-    "hoist-non-react-statics": "1.2.0",
+    "font-awesome-sass-loader": "^2.0.1",
+    "hoist-non-react-statics": "2.2.1",
     "invariant": "2.2.2",
     "json-loader": "0.5.7",
-    "less": "2.7.2",
-    "less-loader": "2.2.3",
     "lodash": "4.17.4",
     "lru-memoize": "1.0.2",
     "map-props": "1.0.0",
     "md5": "2.2.1",
     "moment": "2.18.1",
     "multireducer": "3.1.0",
-    "normalizr": "2.3.1",
+    "normalizr": "3.2.3",
     "phantomjs-prebuilt": "2.1.14",
     "piping": "1.0.0-rc.4",
     "pretty-error": "2.1.1",
@@ -111,28 +109,27 @@
     "qs": "6.5.0",
     "randomcolor": "0.5.3",
     "react": "15.6.1",
-    "react-bootstrap": "0.31.1",
+    "react-bootstrap": "0.31.2",
     "react-disqus-thread": "0.4.0",
     "react-dom": "15.6.1",
-    "react-helmet": "3.3.2",
+    "react-helmet": "5.1.3",
     "react-inline-css": "2.3.1",
     "react-motion": "0.5.0",
-    "react-redux": "4.4.8",
+    "react-redux": "5.0.5",
     "react-router": "2.8.1",
     "react-router-bootstrap": "0.24.2",
     "react-router-redux": "4.0.8",
     "react-stickynode": "1.3.1",
     "redux": "3.7.2",
-    "redux-connect": "3.0.0",
-    "redux-form": "5.3.6",
+    "redux-connect": "5.1.0",
     "redux-responsive": "4.3.2",
     "redux-thunk": "2.2.0",
-    "sass-loader": "4.1.1",
+    "sass-loader": "6.0.6",
     "serialize-javascript": "1.4.0",
     "serve-favicon": "2.4.3",
     "strip-loader": "0.1.2",
     "style-loader": "0.18.2",
-    "superagent": "2.3.0",
+    "superagent": "3.5.2",
     "url-loader": "0.5.9",
     "warning": "3.0.0",
     "webpack-isomorphic-tools": "3.0.3"
@@ -149,7 +146,7 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "next",
-    "node-sass": "3.14.0-0",
+    "node-sass": "4.5.3",
     "react-a11y": "0.3.4",
     "react-addons-test-utils": "15.6.0",
     "react-transform-catch-errors": "1.0.2",
