--- a/package.json
+++ b/package.json
@@ -80,18 +80,18 @@
     "babel-runtime": "6.25.0",
     "better-npm-run": "0.1.0",
     "body-parser": "1.17.2",
-    "bootstrap-sass-loader": "1.0.10",
+    "bootstrap-loader": "2.1.0",
     "classnames": "2.2.5",
     "clean-webpack-plugin": "0.1.16",
     "compression": "1.7.0",
     "concurrently": "3.5.0",
     "css-loader": "0.28.4",
     "exenv": "1.2.2",
-    "express": "^4.15.3",
+    "express": "4.15.3",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "font-awesome": "4.7.0",
-    "font-awesome-sass-loader": "^2.0.1",
+    "font-awesome-sass-loader": "2.0.1",
     "hoist-non-react-statics": "2.2.1",
     "invariant": "2.2.2",
     "json-loader": "0.5.7",
@@ -105,7 +105,7 @@
     "phantomjs-prebuilt": "2.1.14",
     "piping": "1.0.0-rc.4",
     "pretty-error": "2.1.1",
-    "prop-types": "^15.5.10",
+    "prop-types": "15.5.10",
     "qs": "6.5.0",
     "randomcolor": "0.5.3",
     "react": "15.6.1",
@@ -124,10 +124,10 @@
     "redux-connect": "5.1.0",
     "redux-responsive": "4.3.2",
     "redux-thunk": "2.2.0",
+    "resolve-url-loader": "2.1.0",
     "sass-loader": "6.0.6",
     "serialize-javascript": "1.4.0",
     "serve-favicon": "2.4.3",
-    "strip-loader": "0.1.2",
     "style-loader": "0.18.2",
     "superagent": "3.5.2",
     "url-loader": "0.5.9",
@@ -140,9 +140,9 @@
     "babel-plugin-typecheck": "3.9.0",
     "bootstrap-sass": "3.3.7",
     "eslint": "4.3.0",
-    "eslint-config-react-app": "^1.0.5",
+    "eslint-config-react-app": "1.0.5",
     "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "^2.35.0",
+    "eslint-plugin-flowtype": "2.35.0",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "next",
@@ -155,7 +155,7 @@
     "redux-devtools": "3.4.0",
     "redux-devtools-dock-monitor": "1.1.2",
     "redux-devtools-log-monitor": "1.3.0",
-    "webpack": "1.15.0",
+    "webpack": "3.4.1",
     "webpack-dev-middleware": "1.12.0",
     "webpack-hot-middleware": "2.18.2"
   },
