--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
       }
     },
     "build": {
-      "command": "webpack --verbose --colors --display-error-details --config webpack/prod.config.js",
+      "command": "webpack --colors --display-error-details --config webpack/prod.config.js",
       "env": {
         "NODE_ENV": "production"
       }
@@ -80,7 +80,6 @@
     "babel-runtime": "6.25.0",
     "better-npm-run": "0.1.0",
     "body-parser": "1.17.2",
-    "bootstrap-loader": "2.1.0",
     "classnames": "2.2.5",
     "clean-webpack-plugin": "0.1.16",
     "compression": "1.7.0",
@@ -109,7 +108,6 @@
     "qs": "6.5.0",
     "randomcolor": "0.5.3",
     "react": "15.6.1",
-    "react-bootstrap": "0.31.2",
     "react-disqus-thread": "0.4.0",
     "react-dom": "15.6.1",
     "react-helmet": "5.1.3",
@@ -117,7 +115,6 @@
     "react-motion": "0.5.0",
     "react-redux": "5.0.5",
     "react-router": "2.8.1",
-    "react-router-bootstrap": "0.24.2",
     "react-router-redux": "4.0.8",
     "react-stickynode": "1.3.1",
     "redux": "3.7.2",
