--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-redux-universal-hot-example",
   "description": "Example of an isomorphic (universal) webapp using react redux and hot reloading",
   "author": "Erik Rasmussen <rasmussenerik@gmail.com> (http://github.com/erikras)",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "version": "0.9.0",
   "repository": {
     "type": "git",
@@ -66,32 +66,33 @@
   },
   "dependencies": {
     "autoprefixer-loader": "3.2.0",
-    "babel-core": "6.25.0",
+    "babel-core": "6.26.0",
     "babel-loader": "7.1.1",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-react-display-name": "6.25.0",
     "babel-plugin-transform-runtime": "6.23.0",
-    "babel-polyfill": "6.23.0",
+    "babel-polyfill": "6.26.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
-    "babel-register": "6.24.1",
-    "babel-runtime": "6.25.0",
+    "babel-register": "6.26.0",
+    "babel-runtime": "6.26.0",
     "better-npm-run": "0.1.0",
     "body-parser": "1.17.2",
     "classnames": "2.2.5",
     "clean-webpack-plugin": "0.1.16",
     "compression": "1.7.0",
     "concurrently": "3.5.0",
-    "css-loader": "0.28.4",
+    "css-loader": "0.28.5",
+    "eslint-plugin-react": "^7.2.1",
     "exenv": "1.2.2",
-    "express": "4.15.3",
+    "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "font-awesome": "4.7.0",
     "font-awesome-sass-loader": "2.0.1",
-    "hoist-non-react-statics": "2.2.1",
+    "hoist-non-react-statics": "2.2.2",
     "invariant": "2.2.2",
     "json-loader": "0.5.7",
     "lodash": "4.17.4",
@@ -101,7 +102,6 @@
     "moment": "2.18.1",
     "multireducer": "3.1.0",
     "normalizr": "3.2.3",
-    "phantomjs-prebuilt": "2.1.14",
     "piping": "1.0.0-rc.4",
     "pretty-error": "2.1.1",
     "prop-types": "15.5.10",
@@ -113,7 +113,7 @@
     "react-helmet": "5.1.3",
     "react-inline-css": "2.3.1",
     "react-motion": "0.5.0",
-    "react-redux": "5.0.5",
+    "react-redux": "5.0.6",
     "react-router": "2.8.1",
     "react-router-redux": "4.0.8",
     "react-stickynode": "1.3.1",
@@ -136,13 +136,12 @@
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-typecheck": "3.9.0",
     "bootstrap-sass": "3.3.7",
-    "eslint": "4.3.0",
-    "eslint-config-react-app": "1.0.5",
+    "eslint": "4.4.1",
+    "eslint-config-react-app": "2.0.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.35.0",
     "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "next",
+    "eslint-plugin-jsx-a11y": "5.1.1",
     "node-sass": "4.5.3",
     "react-a11y": "0.3.4",
     "react-addons-test-utils": "15.6.0",
@@ -152,7 +151,7 @@
     "redux-devtools": "3.4.0",
     "redux-devtools-dock-monitor": "1.1.2",
     "redux-devtools-log-monitor": "1.3.0",
-    "webpack": "3.4.1",
+    "webpack": "3.5.5",
     "webpack-dev-middleware": "1.12.0",
     "webpack-hot-middleware": "2.18.2"
   },
