--- a/package.json
+++ b/package.json
@@ -111,10 +111,11 @@
     "react-disqus-thread": "0.4.0",
     "react-dom": "15.6.1",
     "react-helmet": "5.1.3",
+    "react-hot-loader": "next",
     "react-inline-css": "2.3.1",
     "react-motion": "0.5.0",
     "react-redux": "5.0.6",
-    "react-router": "2.8.1",
+    "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
     "react-stickynode": "1.3.1",
     "redux": "3.7.2",
