--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "react-redux": "5.0.6",
     "react-router": "3.0.5",
     "react-router-redux": "4.0.8",
+    "react-router-scroll": "0.4.2",
     "react-stickynode": "1.3.1",
     "redux": "3.7.2",
     "redux-connect": "5.1.0",
