--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "lodash": "4.17.4",
     "lru-memoize": "1.0.2",
     "map-props": "1.0.0",
+    "material-ui": "next",
     "md5": "2.2.1",
     "moment": "2.18.1",
     "multireducer": "3.1.0",
