--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "react": "15.6.1",
     "react-disqus-thread": "0.4.0",
     "react-dom": "15.6.1",
+    "react-event-listener": "^0.5.0",
     "react-helmet": "5.1.3",
     "react-hot-loader": "next",
     "react-inline-css": "2.3.1",
