--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "react-disqus-thread": "0.4.0",
     "react-dom": "15.6.1",
     "react-event-listener": "^0.5.0",
+    "react-ga": "2.2.0",
     "react-helmet": "5.1.3",
     "react-hot-loader": "next",
     "react-inline-css": "2.3.1",
