--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "exenv": "1.2.2",
     "express": "4.16.3",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "0.11.2",
+    "file-loader": "1.1.11",
     "font-awesome": "4.7.0",
     "font-awesome-sass-loader": "2.0.1",
     "hoist-non-react-statics": "2.5.0",
@@ -112,7 +112,7 @@
     "react-event-listener": "0.5.3",
     "react-ga": "2.4.1",
     "react-helmet": "5.2.0",
-    "react-hot-loader": "next",
+    "react-hot-loader": "4.0.1",
     "react-inline-css": "2.3.1",
     "react-motion": "0.5.2",
     "react-redux": "5.0.7",
@@ -124,12 +124,12 @@
     "redux-responsive": "4.3.6",
     "redux-thunk": "2.2.0",
     "resolve-url-loader": "2.3.0",
-    "sass-loader": "6.0.7",
+    "sass-loader": "7.0.1",
     "serialize-javascript": "1.4.0",
     "serve-favicon": "2.5.0",
     "style-loader": "0.20.3",
     "superagent": "3.8.2",
-    "url-loader": "0.5.9",
+    "url-loader": "1.0.1",
     "warning": "3.0.0",
     "webpack-isomorphic-tools": "3.0.5"
   },
@@ -150,7 +150,6 @@
     "prettier": "1.12.0",
     "prettier-eslint": "8.8.1",
     "prettier-eslint-cli": "4.7.1",
-    "react-a11y": "0.3.4",
     "react-addons-test-utils": "15.6.2",
     "react-transform-catch-errors": "1.0.2",
     "react-transform-hmr": "1.0.4",
