--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "multireducer": "3.1.2",
     "normalizr": "3.2.4",
     "piping": "1.0.0-rc.4",
+    "polished": "1.9.2",
     "postcss-assets": "5.0.0",
     "postcss-custom-properties": "7.0.0",
     "postcss-flexbugs-fixes": "3.3.1",
