--- a/package.json
+++ b/package.json
@@ -102,10 +102,12 @@
   "devDependencies": {
     "babel-eslint": "10.0.1",
     "bootstrap-sass": "3.3.7",
+    "cypress": "3.5.0",
     "eslint": "5.10.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "3.3.0",
     "eslint-loader": "2.1.1",
+    "eslint-plugin-cypress": "2.7.0",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-prettier": "3.0.0",
